20-sg-rules/main.tf
# Day 39

resource "aws_security_group_rule" "bastion_internet" {
  type        = "ingress"
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
#   cidr_blocks = ["0.0.0.0/0"]
  # or
    cidr_blocks = [local.my_ip]
  # which SG you are creating this rule
  security_group_id = local.bastion_sg_id
}



resource "aws_security_group_rule" "mongodb_bastion" {
  type        = "ingress"
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  # where traffic is coming from
  source_security_group_id = local.bastion_sg_id
  security_group_id        = local.mongodb_sg_id
}

# mongodb accepting connection from catalogue
resource "aws_security_group_rule" "mongodb_catalogue" {
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  protocol                 = "tcp"
  source_security_group_id = local.catalogue_sg_id
  security_group_id        = local.mongodb_sg_id
}



resource "aws_security_group_rule" "mongodb_user" {
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  protocol                 = "tcp"
  source_security_group_id = local.user_sg_id
  security_group_id        = local.mongodb_sg_id
}
